@@ -1,5 +1,4 @@
 
-
                          Initialization file for JOE
                                 Standard Joe
 
