@@ -22,7 +22,8 @@ JOE 3.2
 - The built-in calculator (ESC m) is now a full featured scientific
   calculator (I'm shooting for Casio Fx-4000 level here :-), including
   hexadecimal and ability to sum (and perform statistics on) a highlighted
-  block of numbers.  Hit ^K H at the math prompt for documentation.
+  (possibly rectangular) block of numbers.  Hit ^K H at the math prompt for
+  documentation.
 
 - Colors can now be specified in the joerc file
 
@@ -38,8 +39,8 @@ JOE 3.2
 
 - TAB completion is now much more like bash (again :-).  The cursor stays
   at the file name prompt instead of jumping into the menu system.  Also
-  ^D brings up the menu, like in tcsh.  Also, tab completion now works
-  on user names for ~ expansion.
+  ^D brings up the menu, as in tcsh.  Also, tab completion now works on user
+  names for ~ expansion.
 
 - Now there is a ~/.joe_state file which stores:
 	all history buffers
@@ -47,7 +48,8 @@ JOE 3.2
 	yank records
 
 - Joe now has xterm mouse support: when enabled, the mouse can position
-  the cursor and select blocks.
+  the cursor and select blocks.  When enabled, shift-click emulates old
+  xterm mouse behavior.
 
 - More syntax files: TeX, CSS, OCaml, Delphi, SML and 4GL.  Thanks to
   all of the contributers.
